# NameBatteler

./: .gitignore  CMakeLists.txt  README.md
src/: commandManager.cpp  commandManager.h  depth.cpp  fps.cpp  game.cpp  game.h  gameObject.cpp  gameObject.h  gameingScene.cpp  gameingScene.h  input.cpp  input.h  level.cpp  level.h  main.cpp  messageArea.cpp  messageArea.h  noneScene.cpp  noneScene.h  player.cpp  player.h  rect.cpp  rect.h  scene.cpp  scene.h  screen.cpp  screen.h
src/asset/: EnemyBullet.cpp  EnemyBullet.h  arrowBullet.cpp  arrowBullet.h  block.cpp  block.h  bullet.h  camera.cpp  camera.h  container.cpp  container.h  debugMessage.cpp  debugMessage.h  dotBullet.cpp  dotBullet.h  enemy.cpp  enemy.h  gameObject.cpp  gameObject.h  goal.cpp  goal.h  messageArea.cpp  messageArea.h  moveBlock.cpp  moveBlock.h  moveParticle.cpp  moveParticle.h  nameInput.cpp  nameInput.h  particle.cpp  particle.h  player.cpp  player.h  playerDamageState.cpp  playerDamageState.h  playerFallState.cpp  playerFallState.h  playerJumpState.cpp  playerJumpState.h  playerRunState.cpp  (+4 more)
src/common/: collider.cpp  collider.h  collision.cpp  collision.h  gameObject.cpp  gameObject.h  json.h  rect.cpp  rect.h  state.cpp  state.h  stateMachine.cpp  stateMachine.h
src/core/: depth.h  fps.cpp  fps.h  game.cpp  game.h  input.cpp  screen.cpp  screen.h
src/lib/: json.hpp
src/map/: map.json
src/scene/: inputManager.cpp  inputManager.h  scene.cpp  scene.h
src/scene/end/: endScene.cpp  endScene.h
src/scene/gameing/: gameingInputManager.cpp  gameingInputManager.h  gameingScene.cpp  gameingScene.cpp.orig  gameingScene.h
src/scene/start/: startScene.cpp  startScene.h
